objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Publication_Type__c</fullName>
        <label>Publication Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Magazine</fullName>
                </value>
                <value>
                    <fullName>Newspaper</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cost_Center_Number__c</fullName>
        <label>Cost Center Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Category__c</fullName>
        <description>Telemarketing Category - VoiceCentric</description>
        <label>Follow Up Process</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AA - Agree to Appointment</fullName>
                </value>
                <value>
                    <fullName>Email - Send Email w/Fufillment</fullName>
                </value>
                <value>
                    <fullName>General Inquiry - Other Product</fullName>
                </value>
                <value>
                    <fullName>Lit Fulfillment - Print</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legacy_Campaign_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy Campaign Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Conversion_Rate__c</fullName>
        <formula>(NumberOfConvertedLeads /  NumberOfLeads )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Marcom_Field_Partner__c</fullName>
        <label>Marcom/Field Partner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Specific_Publication__c</fullName>
        <label>Specific Publication</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC/LC Magazine</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_Invoice_Submitted__c</fullName>
        <label>Date Invoice Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Adtrack_Event_Source_Code__c</fullName>
        <label>Adtrack Event Source Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Conversion_Rate__c</fullName>
        <formula>NumberOfOpportunities /   NumberOfLeads</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Conversion Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <validationRules>
        <fullName>Name_of_NPI_Required</fullName>
        <active>true</active>
        <description>Please fill Name of NPI to save the record.</description>
        <errorConditionFormula>NPI__c == true &amp;&amp; ISBLANK( Name_of_NPI__c )</errorConditionFormula>
        <errorMessage>Please fill Name of NPI to save the record.</errorMessage>
    </validationRules>
</CustomObject>